--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ android {
 
 dependencies {
     def room_version = "2.3.0"
+    def fragment_version = "1.3.4"
 
+    implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -42,4 +44,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.cardview:cardview:1.0.0"
 }
