--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarDiaries"
-        android:usesCleartextTraffic="true" >
+        android:theme="@style/Theme.CarDiaries">
         <activity android:name=".Login">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
