--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
+        <activity android:name=".PostDataActivity"/>
         <activity android:name=".Home"/>
         <activity android:name=".MainActivity" android:parentActivityName=".Login"/>
         <meta-data
